unpackaged/main/default/objects/Payment_Agreement__c/Payment_Agreement__c.object-meta.xml
<CustomObject>
    <label>Payment Agreement</label>
    <nameField>
        <displayFormat>PA - {00000}</displayFormat>
        <label>Payment Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>