unpackaged/main/default/objects/Payment_Agreement__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>for Chargent Anywhere component reference (PD-3352)</description>
    <formula>Case__r.Account.Id</formula>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>