unpackaged/main/default/objects/Payment_Agreement__c/fields/Avg_Deposits_Last_2_Months__c.field-meta.xml
<CustomField>
    <fullName>Avg_Deposits_Last_2_Months__c</fullName>
    <label>Avg Deposits Last 2 Months</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>