unpackaged/main/default/objects/Payment_Agreement__c/fields/Balance_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balance Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>