unpackaged/main/default/objects/Payment_Agreement__c/fields/Behind_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Behind_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behind Schedule</label>
    <type>Checkbox</type>
</CustomField>