unpackaged/main/default/objects/Payment_Agreement__c/fields/Last_Payment_Made_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Made_Date__c</fullName>
    <formula>Recovery__r.Last_Payment_Made_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Payment Made Date</label>
    <type>Date</type>
</CustomField>