unpackaged/main/default/objects/Payment_Agreement__c/fields/Local_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Local_Counsel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Counsel</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Agreements</relationshipLabel>
    <relationshipName>Payment_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>