unpackaged/main/default/objects/Payment_Agreement__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>advpm__Matter__c</referenceTo>
    <relationshipLabel>Payment Agreements</relationshipLabel>
    <relationshipName>Payment_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>