unpackaged/main/default/objects/Payment_Agreement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payment Agreements</relationshipLabel>
    <relationshipName>Payment_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>