unpackaged/main/default/objects/Payment_Agreement__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>Local Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>