unpackaged/main/default/objects/Payment_Agreement__c/fields/Past_Due_Balance__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Balance__c</fullName>
    <formula>IF(
ISPICKVAL( Status__c, 'Active'),
Total_Expected_Balance_Today__c -  Balance_Paid__c,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>