unpackaged/main/default/objects/Payment_Agreement__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(Status__c,'Active'),
Past_Due_Balance__c &gt; 0
), 
'Delinquent',
IF(
AND(
ISPICKVAL(Status__c,'Active'),
Past_Due_Balance__c &lt;= 0
), 
'Current',
IF(
ISPICKVAL(Status__c,'Cancelled'),
'Cancelled',
IF(
ISPICKVAL(Status__c,'Completed'),
'Completed',
'NA'
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>