unpackaged/main/default/objects/Payment_Agreement__c/fields/Resume_Original_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Resume_Original_Payment_Schedule__c</fullName>
    <label>Resume Original Payment Schedule</label>
    <type>Date</type>
</CustomField>