unpackaged/main/default/objects/Payment_Agreement__c/fields/Total_Contingency_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Contingency_Fees__c</fullName>
    <formula>Settlement_Total__c *   Contingency__c</formula>
    <label>Total Contingency Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>