unpackaged/main/default/objects/Payment_Agreement__c/fields/Total_Expected_Balance_Today__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Balance_Today__c</fullName>
    <description>Sum of Scheduled Payments with a scheduled date &lt;=TODAY</description>
    <inlineHelpText>Updated automatically</inlineHelpText>
    <label>Total Expected Balance Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>