unpackaged/main/default/objects/Payment_Agreement__c/fields/Total_Scheduled_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Scheduled_Payments__c</fullName>
    <description>Sum of Amount of all Scheduled Payments.</description>
    <label>Total Scheduled Payments ($)</label>
    <summarizedField>Scheduled_Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Scheduled_Payment__c.Payment_Agreement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>