unpackaged/main/default/objects/Payment_Agreement__c/fields/Unique_Loan_and_Status__c.field-meta.xml
<CustomField>
    <fullName>Unique_Loan_and_Status__c</fullName>
    <label>Unique Loan and Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>