unpackaged/main/default/objects/Payment_Agreement__c/recordTypes/Permanent_Modification.recordType-meta.xml
<RecordType>
    <fullName>Permanent_Modification</fullName>
    <active>true</active>
    <label>Permanent Modification</label>
</RecordType>