unpackaged/main/default/objects/Payment_Agreement__c/recordTypes/Reconciliation.recordType-meta.xml
<RecordType>
    <fullName>Reconciliation</fullName>
    <active>true</active>
    <label>Reconciliation</label>
</RecordType>