unpackaged/main/default/objects/Payment_Agreement__c/recordTypes/Settlement_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Settlement_Agreement</fullName>
    <active>true</active>
    <label>Settlement Agreement</label>
</RecordType>