unpackaged/main/default/objects/Payment_Agreement__c/recordTypes/Settlement_Agreement_FRPSA.recordType-meta.xml
<RecordType>
    <fullName>Settlement_Agreement_FRPSA</fullName>
    <active>true</active>
    <label>Settlement Agreement - FRPSA</label>
</RecordType>