unpackaged/main/default/objects/Payment_Agreement__c/recordTypes/Short_Term_Modification.recordType-meta.xml
<RecordType>
    <fullName>Short_Term_Modification</fullName>
    <active>true</active>
    <description>Used for Payment Agreements on short term modifications where the customer is expected to return to their original payment schedule at a specified date</description>
    <label>Short Term Modification</label>
</RecordType>