unpackaged/main/default/objects/Payment_Agreement__c/validationRules/Contingency_Payout_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Contingency_Payout_Method</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,'Active'),
ISPICKVAL(Ownership__c,'Local Counsel'),
NOT(
OR(
Contingency_Payout_Method__c='Net Paid to National Funding',
Contingency_Payout_Method__c='Contingency Paid to Local Counsel'
)))</errorConditionFormula>
    <errorMessage>Contingency Payout Method must be set to Net Paid to National Funding or Contingency Paid to Local Counsel.</errorMessage>
</ValidationRule>