unpackaged/main/default/objects/Payment_Agreement__c/validationRules/Prevent_Duplicate_Active_Agreements.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_Active_Agreements</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Validation_Error__c ,'Existing Active Agreement'),
RecordType.DeveloperName = 'Settlement_Agreement'
)</errorConditionFormula>
    <errorMessage>There is already an active Payment Agreement for this Matter.</errorMessage>
</ValidationRule>